syntax = "proto3";

option go_package = "github.com/marksartdev/trading/internal/exchange/delivery/rpc";

message OHLCV {
  int64 ID = 1;
  int64 Time = 2;
  int32 Interval = 3;
  double Open = 4;
  double High = 5;
  double Low = 6;
  double Close = 7;
  int32 Volume = 8;
  string Ticker = 9;
}

message Deal {
  int64 ID = 1;
  int64 BrokerID = 2;
  int64 ClientID = 3;
  string Ticker = 4;
  int32 Amount = 5;
  bool Partial = 6;
  int64 Time = 7;
  double Price = 8;
}

message DealID {
  int64 ID = 1;
  int64 BrokerID = 2;
}

message BrokerID {
  int64 ID = 1;
}

message CancelResult {
  bool success = 1;
}

service Exchange {
  rpc Statistic (BrokerID) returns (stream OHLCV) {}
  rpc Create (Deal) returns (DealID) {}
  rpc Cancel (DealID) returns (CancelResult) {}
  rpc Results (BrokerID) returns (stream Deal) {}
}
